@@ -6,6 +6,7 @@ Changelog for pdoTools.
 - [#17] [pdoMenu] Added placeholder [[+wf.menutitle]].
 - [#16] [pdoMenu] Disabled status verification of specified parents.
 - [#13] [pdoMenu] Improved work with root of multiple contexts.
+- [pdoResources] Added parameter "&useWeblink" and placeholder "[[+link]]". It is disabled by default.
 
 1.8.5 pl
 ==============
